# ca_welfare_immigrants

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
R/: install_packages.R  mi_combine.R  variance_estimation.R
docs/: data_inventory.yaml  manual_download.md
models/: status_model_boosting_2024_metadata.json  status_model_logistic_2024_metadata.json
outputs/tables/: ca_population_by_group_2023.csv  ca_rates_by_group_program_2023_imputed.csv  ca_rates_by_group_program_2023_observable.csv  chis_acs_comparison_2023.csv  chis_validation_2023.csv
reports/: ca_welfare_by_immigration_status.md
src/: 00_fetch_data.py  01_clean_acs.py  02_train_status_model.py  03_impute_status_acs.py  04_estimate_rates.py  05_report.py  06_pooled_analysis.py  07_validate_chis.py  __init__.py  config.py  run_all.py
src/benchmarks/: __init__.py  dof_population.py  unauthorized.py
src/data_sources/: __init__.py  base.py  calfresh.py  calworks.py  medi_cal.py  registry.py  ssi.py
src/utils/: __init__.py  analysis_units.py  bootstrap.py  chis_loader.py  diagnostics.py  download.py  imputation.py  validation.py  weights.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_mini_pipeline.py  test_snap_estimands.py
tests/unit/: test_analysis_units.py  test_benchmarks.py  test_bootstrap.py  test_config.py  test_data_sources.py  test_diagnostics.py  test_download.py  test_imputation.py  test_pooled_analysis.py  test_validation.py  test_weights.py
